*** Translation Generator WP ***

2024-06-14 - Version 1.6
* New - Add responsive design
* New - Show all language progress bars on translation start
* New - Add support for msgctxt meta
* Fix - Remove orphan meta lines during singular text batch processing
* Fix - Reset "Translation Details" on settings change or new .pot file upload

2024-06-09 - Version 1.5
* New - Add multiselect language field
* New - Add details & progress section to App page
* New - Individual progress bars per language
* New - One .pot file can be translated into multiple languages sequentially

2024-06-08 - version 1.4
* New - Add batch size input field
* New - Add accessibility improvements for screen readers
* New - Add label tooltips next better explain setting fields
* Fix - Use alert notices instead of browser alert modals
* Fix - Make sure quotation marks are not escaped inside HTML tags
* Fix - Append punctuation marks at the end of translated strings if found in source

2024-06-03 - version 1.3
* New: Add project tagline
* New: Add GPT model select field
* New: Add different GPT model translations and update .po file header with selected model
* Tweak: Move excluded terms to settings pages
* Tweak: Update readme.md file with usage instructions
* Fix: Tokens used calculations
* Fix: Tokens cost calculations
* Fix: Remove trailing periods from translations if source sentence doesn't have one

2024-06-01 - version 1.2
* New - Add 20 most widely used WordPress languages to translate files to
* New - Add tabbed navigation
* New - Add OpenAI API field linked to .env file
* New - Add languages select field linked to .env file
* New - Add save notifications
* Tweak - Update translate button colors

2024-05-29 - version 1.1
* New: Add changelog
* Tweak: Show version number to front end
* Tweak: Switch to JS module imports
* Fix: Broken .po files when plural strings are found in .pot file
* Fix: Missing progress bar on subsequent file uploads

2024-05-26 - version 1.0
* Initial release